Edited code and added background video files

--- a/index.html
+++ b/index.html
@@ -545,15 +545,6 @@
 		        <span class="loading-text-words">1</span>
 		        <span class="loading-text-words">V</span>
 		        <span class="loading-text-words">E</span>
-		        <span class="loading-text-words">T</span>
-		        <span class="loading-text-words">H</span>
-		        <span class="loading-text-words">R</span>
-		        <span class="loading-text-words">U</span>
-		        <span class="loading-text-words">F</span>
-		        <span class="loading-text-words">O</span>
-		        <span class="loading-text-words">C</span>
-		        <span class="loading-text-words">U</span>
-		        <span class="loading-text-words">S</span>
 		      </div>
 		    </div>
       </div>
@@ -572,7 +563,7 @@
     </div>
 
   <div class="buttons">
-    <a href="https://">N/A</a>
+    <a href="https://www.instagram.com/drivethrufocus/">N/A</a>
   </div>
 
   <div class="buttons2">
@@ -611,7 +602,7 @@
       "{ }",
       "Seven11",
       "nine out of eleven have bad taste.",
-      "it's alright, nothing 9cups of coffee can't fix.",
+      "it's alright, nothing 9 cups of coffee can't fix.",
       "people be actin' like they never seen a weirdo before",
       "Don't cry when I die, I hated it here.",
       "Don’t make it look like you got Photoshop for Christmas.",
@@ -650,10 +641,14 @@
   <script>
     var videoList =
     [
-      "BadBlood.mp4",
-      "SOULSNATCH.mp4",
-      "FORTHELASTTIME.mp4",
-      "GauzeValley.mp4"
+      "video/BadBlood.mp4",
+      "video/TOXIC.mp4",
+      "video/DVRST.mp4",
+      "GauzeValley.mp4",
+      "video/SoulSnatch.mp4",
+      "video/NightDrive.mp4",
+      "video/GHOST.mp4",
+      "video/"
     ];
     videoList.sort(function(a, b) {return 0.5 - Math.random()});
     document.querySelector("#videoplayer").innerHTML = "<video id='rawvideo' muted autoplay poster='' id='bgvid' loop><source src='" + videoList[0] + "' type='video/mp4'><\/video>";
