added new choice of background video and bug fixes

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
       "video/BadBlood.mp4",
       "video/TOXIC.mp4",
       "video/DVRST.mp4",
-      "GauzeValley.mp4",
+      "video/GauzeValley.mp4",
       "video/SoulSnatch.mp4",
       "video/NightDrive.mp4",
       "video/GHOST.mp4",
