--- a/index.html
+++ b/index.html
@@ -777,7 +777,8 @@
         "video/GauzeValley.mp4",
         "video/SoulSnatch.mp4",
         "video/NightDrive.mp4",
-        "video/GHOST.mp4"
+        "video/GHOST.mp4",
+        "video/"
       ];
     videoList.sort(function (a, b) {return 0.5 - Math.random()});
     document.querySelector("#videoplayer").innerHTML = "<video id='rawvideo' muted autoplay poster='' id='bgvid' loop><source src='" + videoList[0] + "' type='video/mp4'><\/video>";
