--- a/index.html
+++ b/index.html
@@ -693,19 +693,19 @@
   </div>
 
   <div class="buttons">
-    <a href="https://www.instagram.com/drivethrufocus/">N/A</a>
+    <a href="https://www.instagram.com/drivethrufocus/">Insta</a>
   </div>
 
   <div class="buttons2">
-    <a href="https://">N/A</a>
+    <a href="https://">Example</a>
   </div>
 
   <div class="buttons3">
-    <a href="https://">N/A</a>
+    <a href="https://">Example</a>
   </div>
 
   <div class="buttons4">
-    <a href="https://">N/A</a>
+    <a href="https://">Example</a>
   </div>
   <!-- <div class="buttons2">
     <a href="https://illegal.wiki/sk1d">socials</a>
@@ -721,7 +721,7 @@
     <a href="https://vacban.wtf/members/90111/">VACban.wtf</a>
   </div>
 -->
-  <a href="https://en.pronouns.page/@sk1d_eu" rel="me"></a>
+  <a href="https://" rel="me"></a>
   <a href="/" rel="me"></a>
   <script>var messages =
       [
