edit video files

--- a/index.html
+++ b/index.html
@@ -675,6 +675,15 @@
             <span class="loading-text-words">1</span>
             <span class="loading-text-words">V</span>
             <span class="loading-text-words">E</span>
+<!--            <span class="loading-text-words">T</span>
+            <span class="loading-text-words">H</span>
+            <span class="loading-text-words">R</span>
+            <span class="loading-text-words">U</span>
+            <span class="loading-text-words">F</span>
+            <span class="loading-text-words">O</span>
+            <span class="loading-text-words">C</span>
+            <span class="loading-text-words">U</span>
+            <span class="loading-text-words">S</span> -->
           </div>
         </div>
       </div>
@@ -752,19 +761,16 @@
         "Same shit different time.",
         "NG+, back to Level one.",
         "depression won't kill you, loneliness will.",
-        "it begins with a simple kiss and ends in cannibalism.",
         "#DoACrime",
-        "i took the red pill and it was only a placebo.",
         "again. again. again. again. again. again. again. again. again. again. again. again. again. I SAW YOU IN MY DREAMS I THOUGHT IT WAS REAL. again. again. again.again. again. again.",
         "I SAW YOU IN MY DREAMS I THOUGHT IT WAS REAL.",
         "again.",
         "school kills artists.",
         "why do i see a god in the mirror?",
         "idc, fuck everyone.exe",
-        "chronically online individual",
+        "chronically ill individual",
         "People will judge you no matter what you do.",
-        "IDEGAF",
-        "i look like Dylan Klebold but you will never see me banging."
+        "IDEGAF"
       ];
     document.getElementById("message").innerHTML = messages[Math.floor(Math.random() * messages.length)];</script>
 
@@ -774,7 +780,6 @@
         "video/BadBlood.mp4",
         "video/TOXIC.mp4",
         "video/DVRST.mp4",
-        "video/GauzeValley.mp4",
         "video/SoulSnatch.mp4",
         "video/NightDrive.mp4",
         "video/GHOST.mp4"
