Added New Page (For Project will not be in final result)

--- a/Page-2.html
+++ b/Page-2.html
@@ -1,48 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
- <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
- <section>
-    <form>
-      <h1>Login</h1>
-      <div class="inputbox">
-        <ion-icon name="mail-outline"></ion-icon>
-        <input type="email" id="emailInput" required>
-        <label for="">Email</label>
-      </div>
-      <div class="inputbox">
-        <ion-icon name="lock-closed-outline"></ion-icon>
-        <input type="password" id="passwordInput" required>
-        <label for="">Password</label>
-      </div>
-      <div class="forget">
-        <label for=""><input type="checkbox">Remember Me</label>
-        <a href="#">Forget Password</a>
-      </div>
-      <button onclick="validateLogin()">Log in</button>
-      <div class="register">
-        <p>Don't have an account? <a href="register.html">Register</a></p>
-      </div>
-    </form>
- </section>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <section>
+      <form>
+        <h1>Login</h1>
+        <div class="inputbox">
+          <ion-icon name="mail-outline"></ion-icon>
+          <input type="email" id="emailInput" required />
+          <label for="">Email</label>
+        </div>
+        <div class="inputbox">
+          <ion-icon name="lock-closed-outline"></ion-icon>
+          <input type="password" id="passwordInput" required />
+          <label for="">Password</label>
+        </div>
+        <div class="forget">
+          <label for=""><input type="checkbox" />Remember Me</label>
+          <a href="#">Forget Password</a>
+        </div>
+        <button onclick="validateLogin()">Log in</button>
+        <div class="register">
+          <p>Don't have an account? <a href="register.html">Register</a></p>
+        </div>
+      </form>
+    </section>
 
- <script>
- function validateLogin() {
-   var email = document.getElementById('emailInput').value;
-   var password = document.getElementById('passwordInput').value;
+    <script>
+      function validateLogin() {
+        var email = document.getElementById("emailInput").value;
+        var password = document.getElementById("passwordInput").value;
 
-   // Store email and password in localStorage
-   localStorage.setItem('email', email);
-   localStorage.setItem('password', password);
+        // Store email and password in localStorage
+        localStorage.setItem("email", email);
+        localStorage.setItem("password", password);
 
-   // Alert that the data has been stored locally
-   alert('Email and password stored locally');
+        // Alert that the data has been stored locally
+        alert("Email and password stored locally");
 
-   // Proceed with further login logic
-   // Note: Storing passwords in localStorage is not secure and is only for example purposes
- }
- </script>
-</body>
+        // Proceed with further login logic
+        // Note: Storing passwords in localStorage is not secure and is only for example purposes
+      }
+    </script>
+  </body>
 </html>
