--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
   </div>
 
   <div class="buttons3">
-    <a href="https://">Example</a>
+    <a href="Project.html">CS Project</a>
   </div>
 
   <div class="buttons4">
@@ -773,14 +773,15 @@
         "IDEGAF"
       ];
     document.getElementById("message").innerHTML = messages[Math.floor(Math.random() * messages.length)];</script>
-
+<!-- 
+  "video/BadBlood.mp4",
+  "video/TOXIC.mp4",
+  "video/SoulSnatch.mp4",
+  -->
   <script>
     var videoList =
       [
-        "video/BadBlood.mp4",
-        "video/TOXIC.mp4",
         "video/DVRST.mp4",
-        "video/SoulSnatch.mp4",
         "video/NightDrive.mp4",
         "video/GHOST.mp4"
       ];
